fix: Ajuste na ordenação da sequência das tarefas.